--- a/src/main/resources/templates/operations/list.html
+++ b/src/main/resources/templates/operations/list.html
@@ -8,7 +8,10 @@
         <tr>
             <th style="width: 5%">#</th>
             <th style="width: 60%">Message</th>
-            <th style="width: 20%">Date</th>
+            <th class="dropdown" style="width: 20%">Date
+                <a th:href="@{'/sort/{sortDate}' (sortDate = 'ASC')}"><i class="fa fa-chevron-circle-up"></i></a>
+                <a th:href="@{'/sort/{sortDate}' (sortDate = 'DESC')}"><i class="fa fa-chevron-circle-down"></i></a>
+            </th>
             <th style="width: 5%">Done</th>
             <th style="width: 5%">Edit</th>
             <th style="width: 5%">Delete</th>
