--- a/src/main/resources/templates/operations/list.html
+++ b/src/main/resources/templates/operations/list.html
@@ -3,14 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="notes">
+    <form class="form-inline" th:action="@{/(searchText=${searchText})}">
+        <input th:value="${searchText}" th:name="searchText" id="searchText" class="form-control mr-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-outline-primary" type="submit">Search</button>
+    </form>
     <table class="table table-bordered table-hover horizontal-align">
         <thead>
         <tr>
             <th style="width: 5%">#</th>
             <th style="width: 60%">Message</th>
             <th class="dropdown" style="width: 20%">Date
-                <a th:href="@{'/sort/{sortDateOrder}' (sortDateOrder = 'ASC')}"><i class="fa fa-chevron-circle-up"></i></a>
-                <a th:href="@{'/sort/{sortDateOrder}' (sortDateOrder = 'DESC')}"><i class="fa fa-chevron-circle-down"></i></a>
+                <a th:href="@{'/sort/{sortDateOrder}' (sortDateOrder = 'ASC',searchText=${searchText})}"><i class="fa fa-chevron-circle-up"></i></a>
+                <a th:href="@{'/sort/{sortDateOrder}' (sortDateOrder = 'DESC',searchText=${searchText})}"><i class="fa fa-chevron-circle-down"></i></a>
             </th>
             <th style="width: 5%">Done</th>
             <th style="width: 5%">Edit</th>
@@ -18,7 +22,7 @@
         </tr>
         </thead>
         <tbody>
-<!--        <tr th:each="note : ${notes}">-->
+        <!--        <tr th:each="note : ${notes}">-->
         <tr th:each="note : ${page.content}">
             <td th:text="${note.id}" style="text-align: center">#</td>
             <td th:text="${note.message}">Message</td>
@@ -36,26 +40,24 @@
         </tr>
         </tbody>
     </table>
-    <div class="container">
-        <ul class="pagination">
-            <li class="previous" th:if="${page.hasPrevious()}">
-                <a th:href="@{/list(page=${page.number - 1},size=${page.size},sortDateOrder=${sortDateOrder})}">«</a>
+    <ul class="pagination">
+        <li class="previous" th:if="${page.hasPrevious()}">
+            <a th:href="@{/list(page=${page.number - 1},size=${page.size},sortDateOrder=${sortDateOrder},searchText=${searchText})}">«</a>
+        </li>
+        <li class="disabled" th:unless="${page.hasPrevious()}">
+            <a href="#">«</a>
+        </li>
+        <th:block th:each="i : ${#numbers.sequence(0, page.totalPages - 1)}">
+            <li th:classappend="${page.number == i}?'active':''">
+                <a th:href="@{/list(page=${i},size=${page.size},sortDateOrder=${sortDateOrder},searchText=${searchText})}">[[${i} + 1]]</a>
             </li>
-            <li class="disabled" th:unless="${page.hasPrevious()}">
-                <a href="#">«</a>
-            </li>
-            <th:block th:each="i : ${#numbers.sequence(0, page.totalPages - 1)}">
-                <li th:classappend="${page.number == i}?'active':''">
-                    <a th:href="@{/list(page=${i},size=${page.size},sortDateOrder=${sortDateOrder})}">[[${i} + 1]]</a>
-                </li>
-            </th:block>
-            <li class="next" th:if="${page.hasNext()}">
-                <a th:href="@{/list(page=${page.number + 1},size=${page.size},sortDateOrder=${sortDateOrder})}">»</a>
-            </li>
-            <li class="disabled" th:unless="${page.hasNext()}">
-                <a href="#">»</a>
-            </li>
-        </ul>
-    </div>
+        </th:block>
+        <li class="next" th:if="${page.hasNext()}">
+            <a th:href="@{/list(page=${page.number + 1},size=${page.size},sortDateOrder=${sortDateOrder},searchText=${searchText})}">»</a>
+        </li>
+        <li class="disabled" th:unless="${page.hasNext()}">
+            <a href="#">»</a>
+        </li>
+    </ul>
 </div>
 </html>
