--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,11 +4,15 @@
 </head>
 <body>
 
+<div th:if="${error}" class="alert alert-danger">
+    Username or password is incorrect!
+</div>
+
 <div class="container">
     <h2>Please Login!</h2>
     <form action="/login" method="post" >
         <div class="form-group">
-            <label for="username">User name:</label>
+            <label for="username">Username:</label>
             <input type="username" class="form-control" id="username" placeholder="Enter user name" name="username">
         </div>
         <div class="form-group">
