--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,22 +4,23 @@
 </head>
 <body>
 
-<div class="form-style-2">
-
 <div class="container">
     <h2>Please Sign Up!</h2>
-    <form action="/signup" method="post">
+    <form action="/signup" method="post" th:object="${user}">
         <div class="form-group">
-            <label for="username">User name:</label>
-            <input type="username" class="form-control" id="username" placeholder="Enter user name" name="username">
+            <label for="username">Username:</label>
+            <input type="text" class="form-control" id="username" placeholder="Enter username" th:field="*{username}">
+            <small class="text-danger" th:each="err : ${#fields.errors('username')}" th:text="${err}"></small>
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
+            <input type="password" class="form-control" id="password" placeholder="Enter password" th:field="*{password}">
+            <small class="text-danger" th:each="err : ${#fields.errors('password')}" th:text="${err}"></small>
         </div>
         <div class="form-group">
             <label for="matchingPassword">Repeat password:</label>
-            <input type="password" class="form-control" id="matchingPassword" placeholder="Repeat password" name="matchingPassword">
+            <input type="password" class="form-control" id="matchingPassword" placeholder="Repeat password" th:field="*{matchingPassword}">
+            <small class="text-danger" th:each="err : ${#fields.errors('matchingPassword')}" th:text="${err}"></small>
         </div>
         <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
