--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,6 +19,11 @@
             <label for="password">Password:</label>
             <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
         </div>
+        <div class="form-group form-check">
+            <label class="form-check-label">
+                <input class="form-check-input" type="checkbox" id="remember-me" name="remember-me"> Remember me
+            </label>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
