--- a/src/main/resources/templates/operations/edit.html
+++ b/src/main/resources/templates/operations/edit.html
@@ -16,10 +16,8 @@
             </div>
             <div class="form-group">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="done" th:name="done" />
-                    <label class="form-check-label" for="done">
-                        Done?
-                    </label>
+                    <input class="form-check-input" type="checkbox" id="done" th:name="done" th:checked="*{done}"/>
+                    <label class="form-check-label" for="done">Done?</label>
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
