--- a/src/main/resources/templates/operations/usersedit.html
+++ b/src/main/resources/templates/operations/usersedit.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<!--suppress ALL -->
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/head :: head"></head>
 <body>
-<h1>... in progress</h1>
+<div class="container">
+    <div th:replace="fragments/header :: header"></div>
+    <div class="container">
+        <form class="form-horizontal" th:object="${user}" th:action="@{/users/update}" name="edit_form" id="edit_form"
+              method="post" role="form">
+            <div class="form-group">
+                <input type="hidden" id="id" th:field="*{id}"/>
+            </div>
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" id="username" th:field="*{username}" maxlength="100" readonly="readonly"/>
+            </div>
+            <div class="form-group">
+                <label for="role">Role:</label>
+                <select class="form-control" th:field="*{role}">
+                    <option th:each="role : ${roles}"
+                            th:value="${role}" th:text="${role.name()}">ADMIN/USER</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="active" th:field="*{active}" th:checked="*{active}"/>
+                    <label class="form-check-label" for="active">Active?</label>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
