--- a/src/main/resources/templates/operations/userslist.html
+++ b/src/main/resources/templates/operations/userslist.html
@@ -21,13 +21,13 @@
             <td th:text="${user.username}">Username</td>
             <td th:text="${user.role}">Role</td>
             <td style="text-align: center">
-                <i th:if="${user.active} == true" class="fa fa-plus-square-o" style="font-size:20px;color:#337ab7"></i>
-                <i th:if="${user.active} == false" class="fa fa-minus-square-o" style="font-size:20px;color:#337ab7"></i>
+                <i th:if="${user.active}" class="fa fa-plus-square-o" style="font-size:20px;color:#337ab7"></i>
+                <i th:if="${!user.active}" class="fa fa-minus-square-o" style="font-size:20px;color:#337ab7"></i>
             </td>
             <td style="text-align: center"><a th:href="@{'users/edit/{id}'(id=${user.id})}"><i class="fa fa-edit"
                                                                                           style="font-size:20px"></i></a>
             </td>
-            <td style="text-align: center"><a th:href="@{'users/disable/{id}'(id=${user.id})}"><i class="fa fa-remove"
+            <td style="text-align: center"><a th:if="${user.active}" th:href="@{'users/disable/{id}'(id=${user.id})}"><i class="fa fa-remove"
                                                                                             style="font-size:20px"></i></a>
             </td>
         </tr>
