--- a/src/main/resources/templates/operations/list.html
+++ b/src/main/resources/templates/operations/list.html
@@ -28,8 +28,8 @@
             <td th:text="${note.message}">Message</td>
             <td th:text="${#dates.format(note.date, 'EEE, d MMM yyyy HH:mm')}" style="text-align: center">Date</td>
             <td style="text-align: center">
-                <i th:if="${note.done} == true" class="fa fa-plus-square-o" style="font-size:20px;color:#337ab7"></i>
-                <i th:if="${note.done} == false" class="fa fa-minus-square-o" style="font-size:20px;color:#337ab7"></i>
+                <i th:if="${note.done}" class="fa fa-plus-square-o" style="font-size:20px;color:#337ab7"></i>
+                <i th:if="${!note.done}" class="fa fa-minus-square-o" style="font-size:20px;color:#337ab7"></i>
             </td>
             <td style="text-align: center"><a th:href="@{'/edit/{id}'(id=${note.id})}"><i class="fa fa-edit"
                                                                                           style="font-size:20px"></i></a>
