--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,6 +25,7 @@
             </label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
+        <a href="/signup" class="btn btn-link">Sign up</a>
     </form>
 </div>
 
