--- a/src/main/resources/templates/operations/list.html
+++ b/src/main/resources/templates/operations/list.html
@@ -36,11 +36,15 @@
                 <i th:if="${note.done} == true" class="fa fa-plus-square-o" style="font-size:20px;color:#337ab7"></i>
                 <i th:if="${note.done} == false" class="fa fa-minus-square-o" style="font-size:20px;color:#337ab7"></i>
             </td>
-            <td style="text-align: center"><a th:href="@{'/edit/{id}'(id=${note.id})}"><i class="fa fa-edit"
-                                                                                          style="font-size:20px"></i></a>
+            <td style="text-align: center"><a th:href="@{'/edit/{id}'(id=${note.id})}">
+                <i class="fa fa-edit" style="font-size: 20px;"></i></a>
             </td>
-            <td style="text-align: center"><a th:href="@{'/delete/{id}'(id=${note.id})}"><i class="fa fa-trash"
-                                                                                            style="font-size:20px"></i></a>
+            <td style="text-align: center; padding-top: 4px;">
+                <form th:action="@{'/delete/{id}'(id=${note.id})}" th:method="delete">
+                    <button type="submit" class="btn-link">
+                        <i class="fa fa-trash" style="font-size: 20px;"></i>
+                    </button>
+                </form>
             </td>
         </tr>
         </tbody>
