--- a/src/main/resources/templates/operations/userslist.html
+++ b/src/main/resources/templates/operations/userslist.html
@@ -24,11 +24,15 @@
                 <i th:if="${user.active}" class="fa fa-plus-square-o" style="font-size:20px;color:#337ab7"></i>
                 <i th:if="${!user.active}" class="fa fa-minus-square-o" style="font-size:20px;color:#337ab7"></i>
             </td>
-            <td style="text-align: center"><a th:href="@{'users/edit/{id}'(id=${user.id})}"><i class="fa fa-edit"
-                                                                                          style="font-size:20px"></i></a>
+            <td style="text-align: center"><a th:href="@{'users/edit/{id}'(id=${user.id})}">
+                <i class="fa fa-edit" style="font-size: 20px;"></i></a>
             </td>
-            <td style="text-align: center"><a th:if="${user.active}" th:href="@{'users/disable/{id}'(id=${user.id})}"><i class="fa fa-remove"
-                                                                                            style="font-size:20px"></i></a>
+            <td style="text-align: center; padding-top: 4px;">
+                <form th:if="${user.active}" th:action="@{'users/disable/{id}'(id=${user.id})}" th:method="patch">
+                    <button type="submit" class="btn-link">
+                        <i class="fa fa-remove" style="font-size: 20px;"></i>
+                    </button>
+                </form>
             </td>
         </tr>
         </tbody>
