--- a/src/main/resources/templates/operations/usersedit.html
+++ b/src/main/resources/templates/operations/usersedit.html
@@ -6,8 +6,8 @@
 <div class="container">
     <div th:replace="fragments/header :: header"></div>
     <div class="container">
-        <form class="form-horizontal" th:object="${user}" th:action="@{/users/update}" name="edit_form" id="edit_form"
-              method="post" role="form">
+        <form class="form-horizontal" th:object="${user}" th:action="@{/users/update}" th:method="put"
+              name="edit_form" id="edit_form" method="post" role="form">
             <div class="form-group">
                 <input type="hidden" id="id" th:field="*{id}"/>
             </div>
